--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
-COPY target/auth-service-1.0.jar /app/app.jar
+COPY target/auth-service*.jar /app/app.jar
 CMD ["java", "-jar", "/app/app.jar"]
 EXPOSE 5001
