--- a/config-service/src/main/resources/config/alert-service.yml
+++ b/config-service/src/main/resources/config/alert-service.yml
@@ -10,9 +10,6 @@ eureka:
         serviceUrl:
             defaultZone: 'http://192.168.100.29:8761/eureka/'
 spring:
-    application:
-        name: alert-service
-        output.ansi.enabled: ALWAYS
     rabbitmq:
         port: 5672
         host: 192.168.100.29
@@ -50,11 +47,12 @@ spring:
         fixedDelay: 5000
         initialDelay: 5000
         verificationLink: 192.168.100.29/user/verify
-    zipkin:
-        base-url: 'http://192.168.100.29:9411/'
 flyway:
     enabled: true
     url: 'jdbc:mysql://192.168.100.29:3308/mysql'
     schemas: alert_service
     user: root
     password: root
+management:
+    metrics.tags.application: ${spring.application.name}
+    endpoints.web.exposure.include: prometheus
