--- a/config-service/src/main/resources/config/discovery-service.yml
+++ b/config-service/src/main/resources/config/discovery-service.yml
@@ -1,10 +1,11 @@
 server:
-  port: ${PORT:8761}
-
+    port: '${PORT:8761}'
 eureka:
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://192.168.100.29:8761/eureka/
-
+    client:
+        registerWithEureka: false
+        fetchRegistry: false
+        serviceUrl:
+            defaultZone: 'http://192.168.100.29:8761/eureka/'
+management:
+    metrics.tags.application: ${spring.application.name}
+    endpoints.web.exposure.include: prometheus
