--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -18,7 +18,7 @@ spring:
     jpa:
         open-in-view: true
         hibernate:
-            ddl-auto: update
+            ddl-auto: none
         properties:
             hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     datasource:
