--- a/discovery-service/Dockerfile
+++ b/discovery-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
-COPY target/discovery-service-1.0.jar /app/app.jar
+COPY target/discovery-service*.jar /app/app.jar
 CMD ["java", "-jar", "/app/app.jar"]
 EXPOSE 8761
