--- a/docker/config/prometheus.yml
+++ b/docker/config/prometheus.yml
@@ -19,6 +19,31 @@ scrape_configs:
     metrics_path: '/metrics'
     static_configs:
       - targets: ['192.168.100.29:3000']
+  - job_name: 'config-service'
+    scrape_interval: 1m
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['192.168.100.29:8888']
+  - job_name: 'discovery-service'
+    scrape_interval: 1m
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['192.168.100.29:8761']
+  - job_name: 'auth-service'
+    scrape_interval: 1m
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['192.168.100.29:5001']
+  - job_name: 'gateway-service'
+    scrape_interval: 1m
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['192.168.100.29:8080']
+  - job_name: 'alert-service'
+    scrape_interval: 1m
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['192.168.100.29:5002']
   - job_name: 'user-service'
     scrape_interval: 1m
     metrics_path: '/actuator/prometheus'
