--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
-COPY target/gateway-service-1.0.jar /app/app.jar
+COPY target/gateway-service*.jar /app/app.jar
 CMD ["java", "-jar", "/app/app.jar"]
 EXPOSE 8080
