--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
-COPY target/user-service-1.0.1.jar /app/app.jar
+COPY target/user-service*.jar /app/app.jar
 CMD ["java", "-jar", "/app/app.jar"]
 EXPOSE 5003
